# platform-coordination-service

./: .env.dev  .env.example  .gitignore  .ruff.toml  Dockerfile  Makefile  Makefile.integration  README.md  SERVICE-QUALITY.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  quality-report.md  requirements.txt
docs/: api-documentation.md  architecture.md  test-cleanup-report.md  test-suite-status.md
migrations/: 001_add_performance_indexes.sql  001_add_performance_indexes_rollback.sql
monitoring/prometheus/: prometheus.yml
scripts/: add-error-handling.py  add-structlog-dependency.py  apply_migration.py  bootstrap-integration-tests.py  bootstrap-logging.py  bootstrap_app.py  clean-broken-tests.py  fix-logging.py  fix-test-suite.py  measure-performance.py  non-interactive-test-runner.sh  recreate-test-db.py  run-coverage.sh  run-integration-tests.py  run-integration-tests.sh  run-verification.sh  setup-dev-environment.sh  start-with-db.sh  verify-service.py
sql/: README.md
sql/init/: 001_create_service_registry.sql
src/: __init__.py  main.py  main_db.py
src/core/: __init__.py  background_metrics.py  config.py  database.py  error_utils.py  exceptions.py  logging.py  logging_utils.py  metrics.py  middleware.py
src/models/: __init__.py  service.py
src/platform_coordination/: __init__.py  main.py
src/repositories/: __init__.py  base.py  service.py
tests/: __init__.py  test_cors.py  test_error_handling.py  test_example_endpoints.py  test_health.py  test_logging.py  test_logging_simple.py  test_service_verification.py  test_services.py
(+30 files in other folders)
