[project]
name = "platform-coordination-service"
version = "0.1.0"
description = "API service for First Viscount platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "First Viscount Team", email = "dwdrake90@gmail.com" }
]

dependencies = [
    # Core
    "fastapi==0.115.13",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",
    # Utilities
    "python-dotenv==1.0.1",
    "structlog==24.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.5",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    
    # Code Quality
    "ruff==0.9.0",
    "black==24.10.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ["py313"]